kubernetes/base-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sambura
