kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sambura-app
  namespace: sambura
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: sambura-core
  template:
    metadata:
      labels:
        app: sambura-core
    spec:
      containers:
      - name: sambura-core
        image: "USUARIO/sambura-core:v1.0.1" # Substituir pela sua imagem no ECR/DockerHub
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        
        livenessProbe:
          httpGet:
            path: /api/v1/system/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /api/v1/system/health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
          
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
