kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sambura-service
  namespace: sambura
spec:
  selector:
    app: sambura-core
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort # Necessário para o AWS Load Balancer Controller
